tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_character_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (c: Character): Boolean =>
  switch (c) {
    case 'a': true
    case 'b': false
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_character_1.kk:2:3
  │
2 │   switch (c) {
  │   ^^^^^^ Non-exhaustive cases
  │
  = Missing case(s):

      case _:
